[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "safe-app-private-ledger"
version = "1.0.0"
description = "Local personal budgeting companion — fully private, no cloud sync, paired with Public Ledger."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28",
]
