[project]
name = "safe-app-private-ledger"
version = "0.1.0"
description = "Local personal budgeting companion — fully private, no cloud sync, paired with Public Ledger."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
